2002-11-26  James Henstridge  <james@daa.com.au>

	* gtkdoc-mkhtml.in: set gtkdoc-bookname and gtkdoc-version
	parameters in sgml mode, and don't bother with the sed run after
	processing with jade.
	In XML mode, pass the version number in as a parameter too.

	* gtk-doc.dsl.in ($user-html-header$): add <meta> tag if
	gtkdoc-version is set.
	(generate-index-mode): if gtkdoc-bookname is set, add it to the
	hrefs in the index file, like the XSLT sheets do.

	* gtk-doc.xsl: add gtkdoc.version parameter, and use it to add a
	<meta> tag with the gtk-doc version number.

2002-11-16  Damon Chaplin  <damon@gnome.org>

	* Released 0.10.

2002-11-16  Damon Chaplin  <damon@gnome.org>

	* configure.in: bumped version to 0.10.

	* Makefile.am (EXTRA_DIST): added MAINTAINERS.

	* README: updated requirements info, mainly to add XML stuff.

	* NEWS: added news for 0.10

	* MAINTAINERS: 
	* AUTHORS: updated my email address.

2002-11-16  James Henstridge  <james@daa.com.au>

	* gtk-doc.xsl: output HTML in ISO-8859-1 (latin1), as using UTF-8
	can trigger misinterpretation of web pages when the web server
	asserts that the document is encoded in latin1 in the mime type.

2002-11-15  James Henstridge  <james@daa.com.au>

	* gtk-doc.xsl: small changes to make the output closer to valid
	HTML.

	* gtkdoc-fixxref.in (MakeXRef): when substituting in cross
	references, use lower case element and attribute names, and quote
	the attribute value.

2002-11-12  James Henstridge  <james@daa.com.au>

	* gtkdoc-mkdb.in: put content of parameter descriptions in
	<simpara> elements instead of <para>'s.  This makes the generated
	HTML more compact, as it will omit the <p> tag inside the list
	item.

	* gtk-doc.xsl: adjust stylesheet a little.

2002-11-10  James Henstridge  <james@daa.com.au>

	* gtk-doc.xsl: change style for documentation.

	* gtkdoc-mkhtml.in (declaration): copy PNG files to the html
	directory.

2002-11-10  Matthias Clasen  <maclas@gmx.de>
